--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Brandon-Fontes/audio_alchemy/issues"
   },
-  "homepage": "https://github.com/Brandon-Fontes/audio_alchemy#readme"
+  "homepage": "https://github.com/Brandon-Fontes/audio_alchemy#readme",
+  "dependencies": {
+    "node": "^16.1.0"
+  }
 }
